{"message":"Update file: collection.yml","userId":"3487","fileName":"collection.yml"}

--- a/_professional-learning/collection.yml
+++ b/_professional-learning/collection.yml
@@ -14,5 +14,5 @@ collections:
       - For Allied Educators.md
       - OPAL2.md
       - Teacher Work Attachment Plus/.keep
-      - Teacher Work Attachment Plus/Teacher Work Attachment Plus Programme.md
+      - Teacher Work Attachment Plus/Teacher Work Attachment Plus.md
       - Teacher Work Attachment Plus/TWA Plus VISTAs.md
