--- a/_oeic/collection.yml
+++ b/_oeic/collection.yml
@@ -2,6 +2,7 @@ collections:
   oeic:
     output: true
     order:
+      - Associate Professor Helen Chick (2025).md
       - Dr Emma Rawlings Smith (2024).md
       - Mr Francesco Paul Neal Noschese (2023).md
       - Professor Jeremy Stoddard (2022).md
